--- a/conf/application.conf
+++ b/conf/application.conf
@@ -11,7 +11,7 @@ play.filters.enabled=[play.filters.hosts.AllowedHostsFilter]
 
 play.filters.hosts {
   # Allow requests to localhost:9000.
-  allowed=["localhost:9000","127.0.0.1:9000"]
+  allowed=["www.kussausliebe.de","kussausliebe.de","localhost:9000","127.0.0.1:9000"]
 }
 
 play.i18n.langs=["en"]
