--- a/front/package.json
+++ b/front/package.json
@@ -31,8 +31,12 @@
     "webpack-dev-server": "^2.4.5"
   },
   "dependencies": {
+    "axios": "^0.16.2",
     "bootstrap": "^4.0.0-alpha.6",
     "element-ui": "^1.4.3",
-    "vue": "^2.3.2"
+    "lodash": "^4.17.4",
+    "vue": "^2.3.2",
+    "vue-moment": "^2.0.2",
+    "vue-router": "^2.7.0"
   }
 }
