--- a/front/package.json
+++ b/front/package.json
@@ -37,6 +37,7 @@
     "lodash": "^4.17.4",
     "vue": "^2.3.2",
     "vue-moment": "^2.0.2",
-    "vue-router": "^2.7.0"
+    "vue-router": "^2.7.0",
+    "vue-spinner": "^1.0.2"
   }
 }
