--- a/package.json
+++ b/package.json
@@ -2,6 +2,6 @@
   "name": "install-frontend",
   "version": "0.1.0",
   "scripts": {
-    "postinstall": "npm install --prefix front"
+    "postinstall": "npm install --prefix front && npm run build --prefix front"
   }
 }
